force-app/main/default/objects/FS_Outlet_Dispenser__c/FS_Outlet_Dispenser__c.object-meta.xml
<CustomObject>
    <description>Outlet Dispenser.</description>
    <label>Outlet Dispenser</label>
    <nameField>
        <displayFormat>OD-{0000}</displayFormat>
        <label>Outlet Dispensers Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Outlet Dispensers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>