force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/Brand_Set_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Brand_Set_Effective_Date__c</fullName>
    <inlineHelpText>Enter the date format in mm/dd/yyyy</inlineHelpText>
    <label>Brand Set Effective Date</label>
    <type>Date</type>
</CustomField>