force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/Brand_Set_formula__c.field-meta.xml
<CustomField>
    <fullName>Brand_Set_formula__c</fullName>
    <formula>Warehouse_Details__r.Brand_Set__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Brand Set</label>
    <type>Text</type>
</CustomField>