force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/Brand_Set_New__c.field-meta.xml
<CustomField>
    <fullName>Brand_Set_New__c</fullName>
    <label>Brand Set.</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Warehouse_Country_New__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>CAN Default Collection</fullName>
            </value>
            <value>
                <fullName>CAN McDonalds Collection</fullName>
            </value>
            <value>
                <fullName>GER Default Collection</fullName>
            </value>
            <value>
                <fullName>FRA Default Collection</fullName>
            </value>
            <value>
                <fullName>TUK Defualt Collection</fullName>
            </value>
            <value>
                <fullName>NZ Default Collection</fullName>
            </value>
            <value>
                <fullName>SGP Default Collection</fullName>
            </value>
            <value>
                <fullName>Gandalf GER Collection</fullName>
            </value>
            <value>
                <fullName>Gandalf JAPAN Collection</fullName>
            </value>
            <value>
                <fullName>Bluebird CAN Default</fullName>
            </value>
            <value>
                <fullName>GB Default Collection</fullName>
            </value>
            <value>
                <fullName>BE Default Collection</fullName>
            </value>
            <value>
                <fullName>Ireland Default Collection</fullName>
            </value>
            <value>
                <fullName>Japan Default Collection</fullName>
            </value>
            <value>
                <fullName>Thailand Default Collection</fullName>
            </value>
            <value>
                <fullName>Philippines Default Collection</fullName>
            </value>
            <value>
                <fullName>Australia Default Collection</fullName>
            </value>
            <value>
                <fullName>Switzerland Default Collection</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>