force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/Brands_Not_Selected__c.field-meta.xml
<CustomField>
    <fullName>Brands_Not_Selected__c</fullName>
    <label>Brands Not Selected</label>
    <length>255</length>
    <type>Text</type>
</CustomField>