force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/Brands_Selected__c.field-meta.xml
<CustomField>
    <fullName>Brands_Selected__c</fullName>
    <formula>IF(FS_Equip_Type__c == &#39;7000&#39;,   
IF(INCLUDES(FS_7000_Series_Agitated_Brands_Selection__c, &#39;Barqs&#39;), &#39;Barqs &#39;, &#39;&#39;) +  IF(INCLUDES(FS_7000_Series_Agitated_Brands_Selection__c, &#39;Pibb&#39;), &#39;Pibb &#39;, &#39;&#39;) + IF(INCLUDES(FS_7000_Series_Agitated_Brands_Selection__c, &#39;Dr Pepper&#39;), &#39;Dr Pepper &#39;, &#39;&#39;) +  IF(INCLUDES(FS_7000_Series_Static_Brands_Selections__c, &#39;Hi-C / Vitamin Water&#39;), &#39;Hi-C / Vitamin Water &#39;, &#39;&#39;) +  
IF(INCLUDES(FS_7000_Series_Static_Brands_Selections__c, &#39;POWERade&#39;), &#39;POWERade &#39;, &#39;&#39;) +  IF(INCLUDES(FS_7000_Series_Static_Brands_Selections__c, &#39;Raspberry&#39;), &#39;Raspberry &#39;, &#39;&#39;),  

  
 Text(FS_Spicy_Cherry__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Brands Selected</label>
    <type>Text</type>
</CustomField>