force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/Chain_ID__c.field-meta.xml
<CustomField>
    <fullName>Chain_ID__c</fullName>
    <formula>FS_Outlet__r.FS_Chain__r.FS_ACN__c</formula>
    <label>Chain ACN</label>
    <type>Text</type>
</CustomField>