force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/Chain_Name__c.field-meta.xml
<CustomField>
    <fullName>Chain_Name__c</fullName>
    <description>.</description>
    <formula>FS_Outlet__r.FS_Chain__r.Name</formula>
    <label>Chain Name</label>
    <type>Text</type>
</CustomField>