force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/CMS_Response__c.field-meta.xml
<CustomField>
    <fullName>CMS_Response__c</fullName>
    <description>Response received from NMS/CMS for the last update</description>
    <label>CMS Response</label>
    <type>TextArea</type>
</CustomField>