force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/COM__c.field-meta.xml
<CustomField>
    <fullName>COM__c</fullName>
    <formula>Installation__r.FS_COM_Regular__r.FirstName &amp; &quot; &quot; &amp; Installation__r.FS_COM_Regular__r.LastName</formula>
    <label>COM</label>
    <type>Text</type>
</CustomField>