force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/ContentBundleVersion__c.field-meta.xml
<CustomField>
    <fullName>ContentBundleVersion__c</fullName>
    <label>Content Bundle Version</label>
    <length>8</length>
    <type>Text</type>
</CustomField>