force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/ContentSpecVersion__c.field-meta.xml
<CustomField>
    <fullName>ContentSpecVersion__c</fullName>
    <label>Content Spec Version</label>
    <length>8</length>
    <type>Text</type>
</CustomField>