force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/Days_Since_Last_seen_Date__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_seen_Date__c</fullName>
    <formula>Today() - FS_Last_Seen_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Last seen Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>