force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/Days_since_received_consumption_data__c.field-meta.xml
<CustomField>
    <fullName>Days_since_received_consumption_data__c</fullName>
    <formula>TODAY() - FS_Last_Pour_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days since received consumption data</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>