force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/Dispenser_Location_State__c.field-meta.xml
<CustomField>
    <fullName>Dispenser_Location_State__c</fullName>
    <label>Dispenser Location State</label>
    <length>128</length>
    <type>Text</type>
</CustomField>