force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/Dispenser_Notes__c.field-meta.xml
<CustomField>
    <fullName>Dispenser_Notes__c</fullName>
    <label>Dispenser Notes</label>
    <type>TextArea</type>
</CustomField>