force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/DM_Response__c.field-meta.xml
<CustomField>
    <fullName>DM_Response__c</fullName>
    <description>Response from the Device Management System</description>
    <label>DM Response</label>
    <type>TextArea</type>
</CustomField>