force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/DMA__c.field-meta.xml
<CustomField>
    <fullName>DMA__c</fullName>
    <description>Designated Market Area defined by Nielsen. Defines regions where the population can receive the same media offerings</description>
    <label>DMA</label>
    <length>32</length>
    <type>Text</type>
</CustomField>