force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/Enable_CE__c.field-meta.xml
<CustomField>
    <fullName>Enable_CE__c</fullName>
    <label>Enable CE</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Enable</fullName>
            </value>
            <value>
                <fullName>Disable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>