force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/Enable_Promo__c.field-meta.xml
<CustomField>
    <fullName>Enable_Promo__c</fullName>
    <label>Enable Promo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>