force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/Enable_Promo_Dispenser__c.field-meta.xml
<CustomField>
    <fullName>Enable_Promo_Dispenser__c</fullName>
    <description>Value from Dispenser updated by FIRM.</description>
    <label>EnablePromo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>