force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FACT_Serial_Number_ACN__c.field-meta.xml
<CustomField>
    <fullName>FACT_Serial_Number_ACN__c</fullName>
    <formula>(FS_Serial_Number__c)+&quot;-&quot;+ FS_ACN_NBR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Serial Number-ACN</label>
    <type>Text</type>
</CustomField>