force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/Fav_Mix__c.field-meta.xml
<CustomField>
    <fullName>Fav_Mix__c</fullName>
    <label>Fav/Mix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>