force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_7000_Series_Hide_Water_Button_New__c.field-meta.xml
<CustomField>
    <fullName>FS_7000_Series_Hide_Water_Button_New__c</fullName>
    <label>7000 Series Water Button.</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Show</fullName>
            </value>
            <value>
                <fullName>Hide</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>