force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_7000_Series_Hide_Water_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_7000_Series_Hide_Water_Effective_Date__c</fullName>
    <inlineHelpText>Enter the date format in mm/dd/yyyy</inlineHelpText>
    <label>7000 Series Hide Water Effective Date</label>
    <type>Date</type>
</CustomField>