force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_7000_Series_Hide_Water_Overridden__c.field-meta.xml
<CustomField>
    <fullName>FS_7000_Series_Hide_Water_Overridden__c</fullName>
    <label>7000 Series Hide Water Overridden Flag</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FET</fullName>
                <default>true</default>
                <label>FET</label>
            </value>
            <value>
                <fullName>NMS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>