force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_7000_Series_Static_Brands_Selections__c.field-meta.xml
<CustomField>
    <fullName>FS_7000_Series_Static_Brands_Selections__c</fullName>
    <description>rename the existing fields like spicy cherry, still and agitaged fields to &quot;Spicy cherry airwatch attribute&quot; and so on
move these fields to the system info section or in a different section that can be collapsed</description>
    <label>7000 Series Static Brands AW Attribute</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>POWERade</fullName>
            </value>
            <value>
                <fullName>Raspberry</fullName>
            </value>
            <value>
                <fullName>Hi-C</fullName>
            </value>
            <value>
                <fullName>Fuze</fullName>
            </value>
            <value>
                <fullName>Vitamin Water</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>