force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_ACN_NBR__c.field-meta.xml
<CustomField>
    <fullName>FS_ACN_NBR__c</fullName>
    <description>Customer  ACN</description>
    <formula>FS_Outlet__r.FS_ACN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Populated by the ACN Number found on the Outlet Record.</inlineHelpText>
    <label>Outlet ACN</label>
    <type>Text</type>
</CustomField>