force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_ACN_TEXT__c.field-meta.xml
<CustomField>
    <fullName>FS_ACN_TEXT__c</fullName>
    <externalId>true</externalId>
    <label>Outlet ACN</label>
    <length>25</length>
    <type>Text</type>
</CustomField>