force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Actual_Remove_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Actual_Remove_Date__c</fullName>
    <inlineHelpText>Enter the date format in mm/dd/yyyy</inlineHelpText>
    <label>Actual Removal Date</label>
    <type>Date</type>
</CustomField>