force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_AddressHash__c.field-meta.xml
<CustomField>
    <fullName>FS_AddressHash__c</fullName>
    <description>The last time latitude, longitude and time zone were updated...</description>
    <label>AddressHash</label>
    <length>16</length>
    <type>Text</type>
</CustomField>