force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Apply_to_all_dispensers_in_Outlet__c.field-meta.xml
<CustomField>
    <fullName>FS_Apply_to_all_dispensers_in_Outlet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Apply to all dispensers in Outlet</label>
    <type>Checkbox</type>
</CustomField>