force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Asset_Item_Number__c.field-meta.xml
<CustomField>
    <fullName>FS_Asset_Item_Number__c</fullName>
    <description>Asset Item Number of OD Install Base</description>
    <label>Asset Item Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>