force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Asset_Number__c.field-meta.xml
<CustomField>
    <fullName>FS_Asset_Number__c</fullName>
    <description>Asset Number</description>
    <inlineHelpText>ACN_NBR</inlineHelpText>
    <label>Asset Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>