force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Asset_number_Ext__c.field-meta.xml
<CustomField>
    <fullName>FS_Asset_number_Ext__c</fullName>
    <label>Asset number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>