force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_AttributesSelected__c.field-meta.xml
<CustomField>
    <fullName>FS_AttributesSelected__c</fullName>
    <label>AttributesSelected</label>
    <length>50</length>
    <type>Text</type>
</CustomField>