force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Average_Signal_Strength__c.field-meta.xml
<CustomField>
    <fullName>FS_Average_Signal_Strength__c</fullName>
    <label>Average Signal Strength</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>