force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Brand_Selection_Value_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Brand_Selection_Value_Effective_Date__c</fullName>
    <label>Brand Selections Effective Date</label>
    <type>Date</type>
</CustomField>