force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Brandset__c.field-meta.xml
<CustomField>
    <fullName>FS_Brandset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Brandset Associated to Outlet Dispenser</description>
    <label>Brandset</label>
    <referenceTo>FS_Brandset__c</referenceTo>
    <relationshipLabel>Outlet Dispensers (Brandset)</relationshipLabel>
    <relationshipName>CurrentBrandset</relationshipName>
    <type>Lookup</type>
</CustomField>