force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Brandset_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Brandset_Effective_Date__c</fullName>
    <label>Brandset Effective Date</label>
    <type>Date</type>
</CustomField>