force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Brandset_New__c.field-meta.xml
<CustomField>
    <fullName>FS_Brandset_New__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brandset.</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <errorMessage>Selected Brandset is not available for commercial use</errorMessage>
        <filterItems>
            <field>FS_Brandset__c.Available_for_Selection__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>$Profile.Name</field>
            <operation>equals</operation>
            <value>API User, MDM API User</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>FS_Brandset__c</referenceTo>
    <relationshipLabel>Outlet Dispensers</relationshipLabel>
    <relationshipName>Outlet_Dispensers</relationshipName>
    <type>Lookup</type>
</CustomField>