force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Build_Id_SW_Version__c.field-meta.xml
<CustomField>
    <fullName>FS_Build_Id_SW_Version__c</fullName>
    <label>Build ID/SW Version</label>
    <length>32</length>
    <type>Text</type>
</CustomField>