force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Build_Install_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Build_Install_Date__c</fullName>
    <label>Build Install Date</label>
    <type>Date</type>
</CustomField>