force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Bundle_Downloaded__c.field-meta.xml
<CustomField>
    <fullName>FS_Bundle_Downloaded__c</fullName>
    <label>Bundle Downloaded</label>
    <length>100</length>
    <type>Text</type>
</CustomField>