force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Bundle_Name__c.field-meta.xml
<CustomField>
    <fullName>FS_Bundle_Name__c</fullName>
    <formula>IF(NOT(ISBLANK(FS_Bundle_Downloaded__c)),
IF(NOT(ISBLANK(ContentSpecVersion__c)), 
IF(NOT(ISBLANK(ContentBundleVersion__c)),FS_Bundle_Downloaded__c+&#39;_&#39;+&#39;S&#39;+ContentSpecVersion__c+&#39;_&#39;+&#39;V&#39;+ContentBundleVersion__c, FS_Bundle_Downloaded__c+&#39;_&#39;+&#39;S&#39;+ContentSpecVersion__c) ,
 IF(NOT(ISBLANK(ContentBundleVersion__c)),FS_Bundle_Downloaded__c+&#39;_&#39;+&#39;V&#39;+ContentBundleVersion__c,FS_Bundle_Downloaded__c) ) , null)</formula>
    <label>Bundle Name</label>
    <type>Text</type>
</CustomField>