force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Calculated_Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>FS_Calculated_Time_Zone__c</fullName>
    <description>Calculated Time Zone</description>
    <label>Calculated Time Zone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>