force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_CE_Connection_Date_Last__c.field-meta.xml
<CustomField>
    <fullName>FS_CE_Connection_Date_Last__c</fullName>
    <label>CE Connection Date(Last)</label>
    <type>Date</type>
</CustomField>