force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_CE_Connectivity_age__c.field-meta.xml
<CustomField>
    <fullName>FS_CE_Connectivity_age__c</fullName>
    <description>CE Connectivity %age</description>
    <label>CE Connectivity %</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>