force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_CE_Enabled__c.field-meta.xml
<CustomField>
    <fullName>FS_CE_Enabled__c</fullName>
    <description>CE enabled</description>
    <label>FET Enable Consumer Engagement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>