force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_CMS_Version__c.field-meta.xml
<CustomField>
    <fullName>FS_CMS_Version__c</fullName>
    <label>CMS Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>