force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Code__c.field-meta.xml
<CustomField>
    <fullName>FS_Code__c</fullName>
    <label>Dispenser IC Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>46100 : Freestyle GS1 Red</fullName>
            </value>
            <value>
                <fullName>46101 : Freestyle GS1 Black</fullName>
            </value>
            <value>
                <fullName>46099 : Freestyle GS1 Silver</fullName>
            </value>
            <value>
                <fullName>46127 : Freestyle GS1 Red - Wood Crate</fullName>
            </value>
            <value>
                <fullName>46128 : Freestyle GS1 Black - Wood Crate</fullName>
            </value>
            <value>
                <fullName>46126 : Freestyle GS1 Silver - Wood Crate</fullName>
            </value>
            <value>
                <fullName>46130 : Freestyle GS1 Red - Cruise Ship</fullName>
            </value>
            <value>
                <fullName>46293 : Freestyle GS1 Silver - Cruise Ship</fullName>
            </value>
            <value>
                <fullName>46129: Freestyle GS2 Crew Serve - Wood Crate</fullName>
            </value>
            <value>
                <fullName>46402 : SUBWAY Extended Splashplate - without Legs *</fullName>
            </value>
            <value>
                <fullName>46403: SUBWAY Standard Splashplate with Driptray, Cuprest and optional leg kit</fullName>
            </value>
            <value>
                <fullName>46379: Extended Splashplate - without Legs</fullName>
            </value>
            <value>
                <fullName>46401: Standard Splashplate with Driptray, Cuprest and optional leg kit</fullName>
            </value>
            <value>
                <fullName>46102: Freestyle GS2 Crew Serve</fullName>
            </value>
            <value>
                <fullName>XXXXX: Freestyle 6000 McDonalds  M-series</fullName>
            </value>
            <value>
                <fullName>46749: 7100 Red Standard Splashplate with Driptray, Cuprest and optional legs</fullName>
            </value>
            <value>
                <fullName>XXXXX: 7100 Black Standard Splashplate with Driptray, Cuprest and optional legs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>